@@ -120,8 +120,8 @@ COM_CONFIG_FIELD_METAKEYS_DESC="Enter the keywords and phrases that best describ
 COM_CONFIG_FIELD_METAKEYS_LABEL="Site Meta Keywords"
 COM_CONFIG_FIELD_METALANGUAGE_DESC="Places the selected language in the metadata for the site."
 COM_CONFIG_FIELD_METALANGUAGE_LABEL="Site Meta Language"
-COM_CONFIG_FIELD_OFFLINE_MESSAGE_DESC="A message that displays in the frontend if your site is offline."
-COM_CONFIG_FIELD_OFFLINE_MESSAGE_LABEL="Offline Message"
+COM_CONFIG_FIELD_OFFLINE_MESSAGE_DESC="The custom offline message will be used if the 'Offline Message' field is set to 'Use custom message'."
+COM_CONFIG_FIELD_OFFLINE_MESSAGE_LABEL="Custom Message"
 COM_CONFIG_FIELD_SECRET_DESC="This is an auto-generated, unique alphanumeric code for every Joomla! installation. It is used for security functions."
 COM_CONFIG_FIELD_SECRET_LABEL="Secret"
 COM_CONFIG_FIELD_SEF_REWRITE_DESC="Select to use a server's rewrite engine to catch URLs that meet specific conditions and rewrite them as directed. Available for IIS 7 and Apache. <br /><strong>Apache users only!</strong><br /> Rename htaccess.txt to .htaccess before activating.<br /><strong>IIS 7 users only!</strong><br/> Rename web.config.txt to web.config and install IIS URL Rewrite Module before activating.<br />"
@@ -136,9 +136,11 @@ COM_CONFIG_FIELD_SESSION_HANDLER_DESC="The mechanism by which Joomla! identifies
 COM_CONFIG_FIELD_SESSION_HANDLER_LABEL="Session Handler"
 COM_CONFIG_FIELD_SESSION_TIME_DESC="Auto log out a User after they have been inactive for the entered number of minutes. Do not set too high."
 COM_CONFIG_FIELD_SESSION_TIME_LABEL="Session Lifetime"
+COM_CONFIG_FIELD_SITE_DISPLAY_MESSAGE_DESC="Display or not a frontend message when the site is offline. The custom offline message uses the value defined in the 'Custom message' field. The language offline message uses the value defined in the site language ini file."
+COM_CONFIG_FIELD_SITE_DISPLAY_MESSAGE_LABEL="Offline Message"
 COM_CONFIG_FIELD_SITE_NAME_DESC="Enter the name of your Web site. This will be used in various locations (e.g. the backend browser title bar and <em>Site Offline</em> pages)."
 COM_CONFIG_FIELD_SITE_NAME_LABEL="Site Name"
-COM_CONFIG_FIELD_SITE_OFFLINE_DESC="Select whether access to the Site frontend is available. If Yes, the frontend will display the message below."
+COM_CONFIG_FIELD_SITE_OFFLINE_DESC="Select whether access to the Site frontend is available. If Yes, the frontend will display or not a message depending on the settings below."
 COM_CONFIG_FIELD_SITE_OFFLINE_LABEL="Site Offline"
 COM_CONFIG_FIELD_SITENAME_PAGETITLES_DESC="Begin or end all Page Titles with the site name (for example, My Site Name - My Article Name)."
 COM_CONFIG_FIELD_SITENAME_PAGETITLES_LABEL="Include Site Name in Page Titles"
@@ -154,6 +156,8 @@ COM_CONFIG_FIELD_VALUE_CACHE_OFF="OFF - Caching disabled"
 COM_CONFIG_FIELD_VALUE_CACHE_CONSERVATIVE="ON - Conservative caching"
 COM_CONFIG_FIELD_VALUE_CACHE_PROGRESSIVE="ON - Progressive caching"
 COM_CONFIG_FIELD_VALUE_DEVELOPMENT="Development"
+COM_CONFIG_FIELD_VALUE_DISPLAY_OFFLINE_MESSAGE_CUSTOM="Use Custom Message"
+COM_CONFIG_FIELD_VALUE_DISPLAY_OFFLINE_MESSAGE_LANGUAGE="Use Site Language Default Message"
 COM_CONFIG_FIELD_VALUE_ENTIRE_SITE="Entire Site"
 COM_CONFIG_FIELD_VALUE_MAXIMUM="Maximum"
 COM_CONFIG_FIELD_VALUE_MYSQL="MySQL"
