@@ -52,6 +52,7 @@ class JInstallationModelConfiguration extends JModel
 		/* Site Settings */
 		$registry->set('offline', 0);
 		$registry->set('offline_message', JText::_('INSTL_STD_OFFLINE_MSG'));
+		$registry->set('display_offline_message', 1);
 		$registry->set('sitename', $options->site_name);
 		$registry->set('editor', 'tinymce');
 		$registry->set('list_limit', 20);
